# MathorCupC

./: .gitignore  MathorCup_2026_paper_working.docx  README.md  argument_Guidance.md  outputs_Index.md  problem_1_2_3_detailed_argument.md  pyproject.toml  pyrightconfig.json  整体技术路线框架.md
configs/: base.yaml  clinical_rules.yaml  data_schema.yaml  intervention.yaml  performance.yaml  risk_model.yaml
data/raw/: c_topic_extracted.txt  sample_preview.tsv
docs/: CODE_REVIEW.md  整体技术路线框架.md  论文成稿说明.md  论文章节与结果映射.md
scripts/: bootstrap_framework.py  build_mathorcup_paper_docx.py  dump_template_docx.py  make_report_assets.py  run_q1.py  run_q2.py  run_q3.py
src/: main.py
src/data/: cleaning.py  feature_registry.py  governance_report.py  loader.py  schema.py
src/domain/: activity_rules.py  clinical_thresholds.py  constitution_logic.py  intervention_rules.py  tcm_rules.py
src/evaluation/: calibration.py  diagnostics.py  evidence.py  report_metrics.py  robustness.py  stability.py
src/features/: activity_features.py  constitution_features.py  deviation_features.py  interactions.py  metabolic_features.py
src/models/: constitution_effects.py  intervention_optimizer.py  latent_state.py  patient_state.py  risk_score.py  rule_mining.py  strategy_mapping.py  thresholding.py
tests/: test_cohort.py  test_data_rules.py  test_evidence_experiments.py  test_feature_logic.py  test_figures.py  test_intervention_optimizer.py  test_latent_stability_reuse.py  test_latent_state.py  test_risk_model_front_features.py  test_risk_thresholds.py  test_rule_extraction.py  test_stability.py
(+19 files in other folders)
