[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathorcup-c"
version = "0.1.0"
description = "MathorCup C题研究型代码框架"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "numpy>=2.0",
  "scipy>=1.13",
  "scikit-learn>=1.5",
  "statsmodels>=0.14",
  "pyyaml>=6.0",
  "openpyxl>=3.1",
  "matplotlib>=3.8",
  "seaborn>=0.13"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
